--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
         <li>
             <a href="aantal.html">Aantal pizza's</a>
         </li>
+        <li><a href="pizza.html">Pizza zoeken</a></li>
     </ul>
 </nav>
 </body>
