--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,10 +9,9 @@
 <h1>Luiga</h1>
 <nav>
     <ul>
-        <li>
-            <a href="aantal.html">Aantal pizza's</a>
-        </li>
+        <li><a href="aantal.html">Aantal pizza's</a></li>
         <li><a href="pizza.html">Pizza zoeken</a></li>
+        <li><a href="allepizzas.html">Alle pizza's</a></li>
     </ul>
 </nav>
 </body>
