--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,8 @@
         <li><a href="aantal.html">Aantal pizza's</a></li>
         <li><a href="pizza.html">Pizza zoeken</a></li>
         <li><a href="allepizzas.html">Alle pizza's</a></li>
+        <li><a href="naambevat.html">Naam bevat</a></li>
+        <li><a href="prijstussen.html">Prijs tussen</a></li>
     </ul>
 </nav>
 </body>
