--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,6 +14,7 @@
         <li><a href="allepizzas.html">Alle pizza's</a></li>
         <li><a href="naambevat.html">Naam bevat</a></li>
         <li><a href="prijstussen.html">Prijs tussen</a></li>
+        <li><a href="toevoegen.html">Pizza toevoegen</a></li>
     </ul>
 </nav>
 </body>
