--- a/src/main/resources/static/pizza.html
+++ b/src/main/resources/static/pizza.html
@@ -22,6 +22,11 @@
         <dt>Prijs:</dt>
         <dd id="prijs"></dd>
     </dl>
+    <label>Nieuwe prijs:
+        <span id="nieuwePrijsFout" class="fout" hidden>Verplict positief getal.</span>
+        <input id="nieuwePrijs" required type="number" min="0" step="0.01">
+    </label>
+    <button id="bewaar">Bewaar</button>
 </div>
 <div id="nietGevonden" class="fout" hidden>Pizza niet gevonden.</div>
 <div id="storing" class="fout" hidden>Storing,contacteer helpdesk.</div>
